# react-native-tiny-wavpack-decoder

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  TinyWavPackDecoder.podspec  TinyWavpackDecoder.podspec  package.json  react-native-wavpack-decoder.podspec  release.config.js  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
android/: build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  TinyWavPackDecoderModule.cpp
android/src/main/java/com/tinywavpackdecoder/: TinyWavPackDecoderModule.kt  TinyWavPackDecoderPackage.kt  TinyWavpackDecoderModule.kt
example/: app.json  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/tinywavpackdecoder/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/TinyWavPackDecoderExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/TinyWavPackDecoderExample.xcodeproj/: project.pbxproj
example/ios/TinyWavPackDecoderExample.xcodeproj/xcshareddata/xcschemes/: TinyWavpackDecoderExample.xcscheme
example/ios/TinyWavPackDecoderExample.xcworkspace/: contents.xcworkspacedata
example/ios/TinyWavpackDecoderExample/: AppDelegate.swift  Info.plist
example/ios/TinyWavpackDecoderExample.xcodeproj/xcshareddata/xcschemes/: TinyWavpackDecoderExample.xcscheme
example/src/: App.tsx
example/src/helpers/: fileService.ts  permissionsHandler.ts
ios/: TinyWavPackDecoder.h  TinyWavPackDecoder.mm  TinyWavpackDecoder.h
src/: NativeTinyWavPackDecoder.ts  index.tsx
src/tiny-wavpack/common/: TinyWavPackDecoderInterface.c  TinyWavPackDecoderInterface.h
